[package]
name = "disco"
version = "0.1.0"
authors = ["betta-cyber <l21828604@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
log = "0.4"
pretty_env_logger = "0.3"
lettre = "0.9"
lettre_email = "0.9"
